--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-streamlit
-yfinance
-pycaret[full]
-darts
-transformers
-torch
-prophet
-pandas
-scikit-learn
-numpy
-matplotlib
+streamlit==1.35.0
+yfinance==0.2.37
+pycaret[full]==3.2.0
+darts==0.27.1
+transformers==4.38.2
+torch==2.2.1
+prophet==1.1.5
+pandas==2.2.2
+scikit-learn==1.4.1
+numpy==1.26.4
+matplotlib==3.8.3
